--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 //
 // Usage:
-// * gradlew install                 Build
-// * gradlew bintrayUpload           Upload to Bintray
-// * gradlew :module:install         Build a specific module
-// * gradlew :module:bintrayUpload   Upload a specific module to Bintray
+// * gradlew assembleRelease    Build
 //
 // New release TO-DO:
 // * Update version in gradle and doc
 // * Update changelog
 // * Build and test samples
-// * Install library
-// * Publish to Bintray
+// * Build library
 // * Commit
 // * Add tag
 // * Push
@@ -31,7 +27,7 @@ buildscript {
 		androidxFragmentVersion = "1.4.1"
 		androidxLifecycleExtensionsVersion = "2.2.0"
 		androidxLifecycleRuntimeVersion = "2.4.1"
-		androidxRecyclerViewVersion = "1.2.0"
+		androidxRecyclerViewVersion = "1.2.1"
 		androidxViewPagerVersion = "1.0.0"
 		gsonVersion = "2.9.0"
 		materialVersion = "1.5.0"
@@ -40,31 +36,15 @@ buildscript {
 		rxAndroidVersion = "3.0.0"
 		rxJavaVersion = "3.1.3"
 		rxRelayVersion = "3.0.1"
-
-		bintrayRepo = "maven"
-		publishedGroupId = "org.alfonz"
-		libraryVersion = "${majorVersion}.${minorVersion}.${patchVersion}"
-		libraryDescription = "Mr. Alfonz is here to help you build your Android app, make a development process easier and avoid boilerplate code."
-		siteUrl = "https://github.com/petrnohejl/Alfonz"
-		gitUrl = "https://github.com/petrnohejl/Alfonz.git"
-		developerId = "alfonz"
-		developerName = "Alfonz"
-		developerEmail = ""
-		licenseName = "The Apache Software License, Version 2.0"
-		licenseUrl = "http://www.apache.org/licenses/LICENSE-2.0.txt"
-		allLicenses = ["Apache-2.0"]
 	}
 
 	repositories {
 		google()
 		mavenCentral()
-		jcenter()
 	}
 
 	dependencies {
 		classpath "com.android.tools.build:gradle:7.1.1"
-		classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5"
-		classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
 
 		// NOTE: Do not place your application dependencies here; they belong
 		// in the individual module build.gradle files
@@ -75,7 +55,6 @@ allprojects {
 	repositories {
 		google()
 		mavenCentral()
-		jcenter()
 	}
 }
 
