--- a/samples/src/main/AndroidManifest.xml
+++ b/samples/src/main/AndroidManifest.xml
@@ -22,9 +22,9 @@
 
 		<activity
 			android:name=".SamplesActivity"
-			android:label="@string/app_name"
 			android:theme="@style/Theme.AppCompat.Light"
-			android:launchMode="standard">
+			android:launchMode="standard"
+			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
